<resources>
    <!-- Activity Title Text -->
    <string name="chat_activity_title">Chat</string>
    <string name="history_activity_title">History</string>
    <string name="add_activity_title">Add Entry</string>
    <string name="app_name">MyOCD</string>

    <!-- Navigation Button Text -->
    <string name="history_btn_label">View History</string>
    <string name="add_btn_label">Add Entry</string>
    <string name="settings_btn_label">Settings</string>

    <!-- Navigation Button Text -->
    <string name="next_btn_label">Next</string>
    <string name="previous_btn_label">Previous</string>
    <string name="submit_entry_btn_label">Submit</string>

    <!-- Thought Record Question(s) Header(s) -->
    <string name="trigger_header_txt">Identify the triggering situation, image, thought, or feeling </string>
    <string name="response_header_txt">What was your response?</string>
    <string name="response_severity_header_txt">How intense was it? (0-100%) </string>
    <string name="obsession_header_txt">What obsessional thoughts followed the trigger?</string>
    <string name="compulsion_header_txt">What compulsion did you engage in to mitigate these feelings?</string>
    <string name="assessment_header_txt">What do you think would be a helpful alternative interpretation or response to said action?</string>
    <string name="outcome_header_txt">With that assesment in mind, re-rate your emotion (0-100%) </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>