<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ObsessionCompulsionFragment"
    android:orientation="vertical"
>

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/obsession_header_txt" />

    <EditText
        android:id="@+id/obsession_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:gravity="center"
        android:text="@string/compulsion_header_txt" />

    <EditText
        android:id="@+id/compulsion_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxHeight="@dimen/entry_input_max_height"
        android:minHeight="48dp"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="left" />

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:gravity="center"
        android:text="@string/assessment_header_txt" />

    <EditText
        android:id="@+id/assessment_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/obsession_compulsion_next_btn"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:text="@string/next_btn_label" />
</LinearLayout>