<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TriggerResponseFragment">

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/trigger_header_txt" />

    <EditText
        android:id="@+id/trigger_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxHeight="@dimen/entry_input_max_height"
        android:minHeight="48dp"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="left" />

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:gravity="center"
        android:text="@string/response_header_txt" />

    <EditText
        android:id="@+id/response_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxHeight="@dimen/entry_input_max_height"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="left" />

    <TextView
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:gravity="center"
        android:text="@string/response_severity_header_txt" />

    <EditText
        android:id="@+id/response_severity_input"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/trigger_response_next_btn"
        android:layout_width="@dimen/entry_comp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/entry_gap"
        android:text="@string/next_btn_label" />

</LinearLayout>